feature: routes added to issue timeout and remove timoue from user
